syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/check_iteration.proto";
import "ci/proto/storage/common.proto";
import "google/protobuf/timestamp.proto";

message CheckTask {
    FullTaskId id = 1;
    int32 numberOfPartitions = 2;
    bool isRight = 3;
    CheckStatus status = 4;
    google.protobuf.Timestamp created = 5;
    string job_name = 7;
    string logbroker_source_id = 8;
    CheckTaskType type = 9;
}

message FullTaskId {
    IterationId iteration_id = 1;
    string task_id = 2;
}
