syntax = "proto3";

package yandex.mdb.maintainance.v1;
option go_package = "a.yandex-team.ru/cloud/mdb/mdb-maintenance/api/spec/v1;maintainancev1";

import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";

service MaintenanceService {
    rpc Plan(PlanMaintenanceRequest) returns (PlanMaintenanceResponse) {}
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
}

message GetTaskResponse {
    string task_id = 1;
    enum TaskStatus {
        TASK_STATUS_UNKNOWN = 0;
        PLANNED = 1;
        CANCELED = 2;
        COMPLETED = 3;
        FAILED = 4;
        REJECTED = 5;
    }
    TaskStatus task_status = 2;
}

message GetTaskRequest {
    string task_id = 1;
}

message PlanMaintenanceRequest {
    ClusterSelector selector = 1;
    enum Priority {
        NORMAL = 0;
        CRITICAL = 1;
    }
    Priority priority = 2;

    string info = 3;  // Short comment about task in english, SEEN BY USERS
    Schedule schedule = 4;
    string config_id = 5;
}

message Schedule {
    // The segment in time, that task should be executed.
    // User is able to reschedule in given segment [lower_bound, upper_bound]
    google.protobuf.Timestamp lower_bound = 5;
    google.protobuf.Timestamp upper_bound = 6;
}

message PlanMaintenanceResponse {
    google.rpc.Status error = 1; // for error and cancellation
    string task_id = 2;
}

message ClusterSelector {
    string cid = 1;
}
